--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,9 +10,9 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "Release" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "Release" ]
 
 jobs:
   build:
