--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -25,6 +25,10 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag ${{ env.IMAGE_NAME }}:latest
+    - name: generate FOO unique variable based on timestamp
+      run: echo FOO=foobar--$(date +%s) >> $GITHUB_ENV
+    - name: other step that needs FOO
+      run: echo ${{ env.FOO }}
     - name: Log into registry
       uses: docker/login-action@v1
       with:
