--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -23,12 +23,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{ env.IMAGE_NAME }}:latest
     - name: generate FOO unique variable based on timestamp
       run: echo FOO=foobar--$(date +%s) >> $GITHUB_ENV
-    - name: other step that needs FOO
-      run: echo ${{ env.FOO }}
+    
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag ${{ env.IMAGE_NAME }}:${{ env.FOO }}
+
     - name: Log into registry
       uses: docker/login-action@v1
       with:
@@ -40,8 +40,8 @@ jobs:
       with:
         push: true
         build-args: |
-          version=latest
-        tags: ${{ secrets.ACR_ENDPOINT }}/${{ env.IMAGE_NAME }}:latest
+          version=${{ env.FOO }}
+        tags: ${{ secrets.ACR_ENDPOINT }}/${{ env.IMAGE_NAME }}:${{ env.FOO }}
         
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
