--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{ env.IMAGE_NAME }}:latest
+      run: docker build . --file Dockerfile --tag ${{ env.IMAGE_NAME }}:Release
     - name: Log into registry
       uses: docker/login-action@v1
       with:
@@ -36,8 +36,8 @@ jobs:
       with:
         push: true
         build-args: |
-          version=latest
-        tags: ${{ secrets.ACR_ENDPOINT }}/${{ env.IMAGE_NAME }}:latest
+          version=Release
+        tags: ${{ secrets.ACR_ENDPOINT }}/${{ env.IMAGE_NAME }}:Release
         
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
